objects/Test_Cases__c.object
<CustomObject>
    <description>Test cases are the QA steps and actions used to test a requirement.</description>
    <fields>
        <fullName>Build_Status__c</fullName>
        <label>Build Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Titled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <description>List any dependencies for this test case.</description>
        <inlineHelpText>List any dependencies for this test case.</inlineHelpText>
        <label>Dependencies</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>Enter a summary of Expected Results</inlineHelpText>
        <label>Expected Result</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Run_Status__c</fullName>
        <label>Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Run</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <inlineHelpText>Enter short description of the isuue</inlineHelpText>
        <label>Test Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>